# clipboard-replacer

./: Cargo.toml  README.md  config.toml  install.ps1  uninstall.ps1
.github/workflows/: release.yml
src/: main.rs
